--- a/rest-client.html
+++ b/rest-client.html
@@ -1,7 +1,7 @@
 <html><body>
 <script>
 // Note: Node.js doesn't natively implement XMLHttpRequest nor fetch(), so this needs to run in an actual browser page
-// To run on node.js, use Node Fetch: https://www.npmjs.com/package/node-fetch 
+// To run on node.js, use Node Fetch: https://www.npmjs.com/package/node-fetch or another library
 
 const apiUrl = 'http://api.coincap.io/v2/assets/bitcoin';
 
